--- a/get-well-soon-sanstha/package.json
+++ b/get-well-soon-sanstha/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-     "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
     "next-sitemap": "^4.2.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
